; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphicspath.c_test_addclosedcurve.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphicspath.c_test_addclosedcurve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { double, double }

@FillModeAlternate = common dso_local global i32 0, align 4
@InvalidParameter = common dso_local global i32 0, align 4
@Ok = common dso_local global i32 0, align 4
@addclosedcurve_path = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_addclosedcurve to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_addclosedcurve() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca [4 x %struct.TYPE_3__], align 16
  %4 = getelementptr inbounds [4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* %3, i64 0, i64 0
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store double 0.000000e+00, double* %5, align 16
  %6 = getelementptr inbounds [4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* %3, i64 0, i64 0
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  store double 0.000000e+00, double* %7, align 8
  %8 = getelementptr inbounds [4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* %3, i64 0, i64 1
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  store double 1.000000e+01, double* %9, align 16
  %10 = getelementptr inbounds [4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* %3, i64 0, i64 1
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  store double 1.000000e+01, double* %11, align 8
  %12 = getelementptr inbounds [4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* %3, i64 0, i64 2
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  store double 1.000000e+01, double* %13, align 16
  %14 = getelementptr inbounds [4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* %3, i64 0, i64 2
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  store double 2.000000e+01, double* %15, align 8
  %16 = getelementptr inbounds [4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* %3, i64 0, i64 3
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  store double 3.000000e+01, double* %17, align 16
  %18 = getelementptr inbounds [4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* %3, i64 0, i64 3
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  store double 1.000000e+01, double* %19, align 8
  %20 = load i32, i32* @FillModeAlternate, align 4
  %21 = call i32 @GdipCreatePath(i32 %20, i32** %2)
  %22 = call i32 @GdipAddPathClosedCurve2(i32* null, %struct.TYPE_3__* null, i32 0, double 0.000000e+00)
  store i32 %22, i32* %1, align 4
  %23 = load i32, i32* @InvalidParameter, align 4
  %24 = load i32, i32* %1, align 4
  %25 = call i32 @expect(i32 %23, i32 %24)
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @GdipAddPathClosedCurve2(i32* %26, %struct.TYPE_3__* null, i32 0, double 0.000000e+00)
  store i32 %27, i32* %1, align 4
  %28 = load i32, i32* @InvalidParameter, align 4
  %29 = load i32, i32* %1, align 4
  %30 = call i32 @expect(i32 %28, i32 %29)
  %31 = load i32*, i32** %2, align 8
  %32 = getelementptr inbounds [4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* %3, i64 0, i64 0
  %33 = call i32 @GdipAddPathClosedCurve2(i32* %31, %struct.TYPE_3__* %32, i32 -1, double 0.000000e+00)
  store i32 %33, i32* %1, align 4
  %34 = load i32, i32* @InvalidParameter, align 4
  %35 = load i32, i32* %1, align 4
  %36 = call i32 @expect(i32 %34, i32 %35)
  %37 = load i32*, i32** %2, align 8
  %38 = getelementptr inbounds [4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* %3, i64 0, i64 0
  %39 = call i32 @GdipAddPathClosedCurve2(i32* %37, %struct.TYPE_3__* %38, i32 1, double 1.000000e+00)
  store i32 %39, i32* %1, align 4
  %40 = load i32, i32* @InvalidParameter, align 4
  %41 = load i32, i32* %1, align 4
  %42 = call i32 @expect(i32 %40, i32 %41)
  %43 = load i32*, i32** %2, align 8
  %44 = getelementptr inbounds [4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* %3, i64 0, i64 0
  %45 = call i32 @GdipAddPathClosedCurve2(i32* %43, %struct.TYPE_3__* %44, i32 4, double 1.000000e+00)
  store i32 %45, i32* %1, align 4
  %46 = load i32, i32* @Ok, align 4
  %47 = load i32, i32* %1, align 4
  %48 = call i32 @expect(i32 %46, i32 %47)
  %49 = load i32*, i32** %2, align 8
  %50 = load i32, i32* @addclosedcurve_path, align 4
  %51 = load i32, i32* @addclosedcurve_path, align 4
  %52 = call i32 @ARRAY_SIZE(i32 %51)
  %53 = load i32, i32* @FALSE, align 4
  %54 = call i32 @ok_path(i32* %49, i32 %50, i32 %52, i32 %53)
  %55 = load i32*, i32** %2, align 8
  %56 = call i32 @GdipDeletePath(i32* %55)
  ret void
}

declare dso_local i32 @GdipCreatePath(i32, i32**) #1

declare dso_local i32 @GdipAddPathClosedCurve2(i32*, %struct.TYPE_3__*, i32, double) #1

declare dso_local i32 @expect(i32, i32) #1

declare dso_local i32 @ok_path(i32*, i32, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1

declare dso_local i32 @GdipDeletePath(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
